--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@ layout: default
 {% include banner.html %}
 <div class="container">
     <div class="row justify-content-center">
-        <h1 style="margin-bottom: 3rem">About</h1>
+        <h1>About</h1>
     </div>
+    <hr>
     <div class="row justify-content-center">
         <div class="col-lg-3 col-md-4">
-            <img src="https://pbs.twimg.com/profile_images/1094050380621758464/WkuAatTV_400x400.jpg" class="img-fluid mx-auto d-block" style="max-height: 240px; border-radius: 50%; margin-bottom: 2rem;">
+            <img src="assets/images/profile.jpg" class="img-fluid mx-auto d-block" style="max-height: 240px; border-radius: 20%; margin-bottom: 2rem;">
         </div>
         <div class="col-md-8">
             <p style="margin-top: 0px">I build tools and systems to help mission-driven organizations solve operational and informatics problems. My favorite tasks involve advanced machine learning models, beautiful interfaces, creative thinking, and smooth data pipelines. I am experienced in natual language processing, computer vision, and geographic information systems.</p>
@@ -19,8 +20,9 @@ layout: default
 <div style="background: rgb(136, 150, 172); padding-top: 2rem;">
     <div class="container">
         <div class="row justify-content-center">
-            <h2 style="margin-bottom: 3rem">Portfolio</h2>
+            <h1>Portfolio</h1>
         </div>
+        <hr>
     </div>
     <div class="container">
     {% assign portfolio = site.portfolio | sort: "path", "last" | reverse %}
