lil update for myself

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@ layout: default
             <img src="assets/images/profile.jpg" class="img-fluid mx-auto d-block" style="max-height: 240px; border-radius: 20%; margin-bottom: 2rem;">
         </div>
         <div class="col-md-8">
-            <p style="margin-top: 0px">I build tools and systems to help mission-driven organizations solve operational and informatics problems. My favorite tasks involve advanced machine learning models, beautiful interfaces, creative thinking, and smooth data pipelines. I am experienced in natual language processing, computer vision, and geographic information systems.</p>
-            <p>As an avid learner and teacher, I can frequently be found contributing to Chicago's Python and civic tech communities.</p>
+            <p style="margin-top: 0px">I help organizations provide better products and programs with code. My work involves end-to-end data streaming, transformation, and presentation for action.</p>
+            <p>My tools are Terraform, Airflow, Snowflake, and Python.</p>
         </div>
     </div>
 </div>
-<div style="background: rgb(136, 150, 172); padding-top: 2rem;">
+<div style="background: rgb(136, 150, 172); padding-top: 2rem;" id="Portfolio">
     <div class="container">
         <div class="row justify-content-center">
             <h1>Portfolio</h1>
